fixed spacing

--- a/app/assets/stylesheets/registry.css
+++ b/app/assets/stylesheets/registry.css
@@ -1,4 +1,5 @@
 #registry {
+  padding: 1.5em;
 }
 
 th.registry {
